--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,11 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.7
   bloc: ^9.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   uuid: ^4.5.1
+  hydrated_bloc: ^10.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
