--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_bloc: ^9.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  bloc: ^9.0.0
+  meta: ^1.16.0
 
 dev_dependencies:
   flutter_test:
